// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ModelRepositoryLocationList matches snapshot with all items 1`] = `
<div
  className="location-list"
>
  <List
    lockVertically={false}
    onChange={[Function]}
    removableByMove={false}
    renderItem={[Function]}
    renderList={[Function]}
    transitionDuration={300}
    values={
      Array [
        Object {
          "repositoryLocationType": "PUBLIC",
          "value": "",
        },
        Object {
          "repositoryLocationType": "CONFIGURABLE",
          "value": "test.com",
        },
        Object {
          "repositoryLocationType": "LOCAL",
          "value": "d:/myModels",
        },
        Object {
          "repositoryLocationType": "DMR",
          "value": "c:/dtmi",
        },
      ]
    }
    voiceover={
      Object {
        "canceled": [Function],
        "dropped": [Function],
        "item": [Function],
        "lifted": [Function],
        "moved": [Function],
      }
    }
  />
</div>
`;

exports[`ModelRepositoryLocationList matches snapshot with no items 1`] = `
<div
  className="location-list"
>
  <List
    lockVertically={false}
    onChange={[Function]}
    removableByMove={false}
    renderItem={[Function]}
    renderList={[Function]}
    transitionDuration={300}
    values={Array []}
    voiceover={
      Object {
        "canceled": [Function],
        "dropped": [Function],
        "item": [Function],
        "lifted": [Function],
        "moved": [Function],
      }
    }
  />
</div>
`;
